# python-resolver

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  setup.cfg
resolver/: __init__.py  __main__.py  archive.py
resolver/mindeps/: __init__.py  __main__.py
