[metadata]
name = python_resolver
version = 0.0.1
description = Python dependency resolver
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@riseup.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    homepage = https://github.com/FFY00/python-resolver

[options]
packages = find:
install_requires =
    importlib_metadata>=3.2.0
    mousebender~=2.0.0
    resolvelib~=0.7.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    python-resolver = resolver.__main__:entrypoint
    mindeps = resolver.mindeps.__main__:entrypoint

[options.extras_require]
mindeps =
    build~=0.4.0
    pep517
test =
    pytest>=4
    pytest-cov>=2

[flake8]
max-line-length = 127
max-complexity = 10
extend-ignore = E203

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = resolver
known_third_party = build

[mypy]
ignore_missing_imports = True
strict = True

[coverage:paths]
source =
    src
    */site-packages
    *\site-packages

[coverage:html]
show_contexts = true
